--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 
   width: 1024px;
   margin: 0px auto;
-  background: url(./assets/Vector.svg) no-repeat ; 
+  background: url("./assets/Vector.svg") no-repeat ; 
   background-position: top -5.23rem right 0rem ;
   background-size: 50%;
   background-color: #fafafa;
@@ -53,7 +53,7 @@ article {
 }
 
 article.artigoprincipal {
-  background: url("./img/imagem-hero1.png") no-repeat top -5rem right;
+  background: url('https://alysondev.github.io/siteinstitucional/img/imagem-hero1.png') no-repeat top -5rem right;
   background-size: 700px;
 }
 article h2 {
